--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -56,7 +56,7 @@ jobs:
       - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/upload-artifact@v1
         with:
-          name: CellProfiler-macOS.zip
+          name: CellProfiler.zip
           path: ./distribution/macos/dist/CellProfiler.zip
       - if: ${{ matrix.os == 'windows-2019' }}
         uses: actions/upload-artifact@v1
@@ -84,7 +84,7 @@ jobs:
           tag_name: ${{ github.ref }}
       - uses: actions/download-artifact@v1
         with:
-          name: CellProfiler-macOS.zip
+          name: CellProfiler.zip
           path: ./
       - uses: actions/download-artifact@v1
         with:
@@ -96,8 +96,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           asset_content_type: application/zip
-          asset_name: CellProfiler-macOS.zip
-          asset_path: CellProfiler-macOS.zip
+          asset_name: CellProfiler.zip
+          asset_path: /home/runner/work/CellProfiler/CellProfiler/
           upload_url: ${{ steps.create_release.outputs.upload_url }}
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -105,7 +105,7 @@ jobs:
         with:
           asset_content_type: application/exe
           asset_name: CellProfiler.exe
-          asset_path: CellProfiler.exe
+          asset_path: /home/runner/work/CellProfiler/CellProfiler/
           upload_url: ${{ steps.create_release.outputs.upload_url }}
 name: create-release
 on:
