--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           brew install mysql
           make
-          ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler.zip
+          ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler-macOS.zip
         working-directory: ./distribution/macos
       - env:
           JDK_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
@@ -56,8 +56,8 @@ jobs:
       - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/upload-artifact@v1
         with:
-          name: CellProfiler.zip
-          path: ./distribution/macos/dist/CellProfiler.zip
+          name: CellProfiler-macOS.zip
+          path: ./distribution/macos/dist/CellProfiler-macOS.zip
       - if: ${{ matrix.os == 'windows-2019' }}
         uses: actions/upload-artifact@v1
         with:
@@ -84,20 +84,19 @@ jobs:
           tag_name: ${{ github.ref }}
       - uses: actions/download-artifact@v1
         with:
-          name: CellProfiler.zip
+          name: CellProfiler-macOS.zip
           path: ./
       - uses: actions/download-artifact@v1
         with:
           name: CellProfiler.exe
           path: ./
-      - run: ls -R
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: actions/upload-release-asset@v1
         with:
           asset_content_type: application/zip
-          asset_name: CellProfiler.zip
-          asset_path: /home/runner/work/CellProfiler/CellProfiler/
+          asset_name: CellProfiler-macOS.zip
+          asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler-macOS.zip
           upload_url: ${{ steps.create_release.outputs.upload_url }}
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -105,7 +104,7 @@ jobs:
         with:
           asset_content_type: application/exe
           asset_name: CellProfiler.exe
-          asset_path: /home/runner/work/CellProfiler/CellProfiler/
+          asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler.exe
           upload_url: ${{ steps.create_release.outputs.upload_url }}
 name: create-release
 on:
