--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
           pyinstaller distribution/windows/cellprofiler.spec
-          iscc /dMyAppVersion="4.0.0rc8" "distribution/windows/cellprofiler.iss"
+          iscc /dMyAppVersion="4.0.0rc9" "distribution/windows/cellprofiler.iss"
       - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/upload-artifact@v1
         with:
@@ -103,8 +103,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           asset_content_type: application/exe
-          asset_name: CellProfiler.exe
-          asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler.exe
+          asset_name: CellProfiler_4.0.0rc9.exe
+          asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler_4.0.0rc9.exe
           upload_url: ${{ steps.create_release.outputs.upload_url }}
 name: create-release
 on:
