--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,10 +59,10 @@ jobs:
           name: CellProfiler-macOS.zip
           path: ./distribution/macos/dist/CellProfiler-macOS.zip
       - if: ${{ matrix.os == 'windows-2019' }}
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
-          name: CellProfiler.exe
-          path: ./distribution/windows/Output/CellProfiler.exe
+          name: CellProfiler*.exe
+          path: ./distribution/windows/Output/CellProfiler*.exe
     strategy:
       matrix:
         os: [macos-10.15, windows-2019]
@@ -88,7 +88,7 @@ jobs:
           path: ./
       - uses: actions/download-artifact@v1
         with:
-          name: CellProfiler.exe
+          name: CellProfiler_4.0.0rc9.exe
           path: ./
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
