--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,17 +30,21 @@ jobs:
       - run: |
           pip install --upgrade pip setuptools wheel
           pip install numpy
-          git clone https://github.com/CellProfiler/distribution.git
+          git clone --single-branch --branch codesign https://github.com/CellProfiler/distribution.git
           git clone https://github.com/CellProfiler/pyinstaller.git
       - run: pip install --editable .
         working-directory: pyinstaller
       - env:
           LDFLAGS: -L/usr/local/opt/openssl/lib
+          CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
+          CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
         if: ${{ matrix.os == 'macos-10.15' }}
         run: |
           sed -i '' 's/4.0.0/4.0.6/' Info.plist
           brew install mysql
           make
+          chmod +x add-osx-cert.sh && ./add-osx-cert.sh
+          chmod +x osx-codesign.sh && ./osx-codesign.sh
           ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler-macOS-4.0.6.zip
         working-directory: ./distribution/macos
       - env:
@@ -110,5 +114,5 @@ jobs:
 name: create-release
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - "codesign"
