--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           sed -i '' 's/4.0.0/4.0.6/' Info.plist
           brew install mysql
           make
-          chmod +x add-osx-cert.sh && ./add-osx-cert.sh
+          chmod +x add-osx-certificate.sh && ./add-osx-certificate.sh
           chmod +x osx-codesign.sh && ./osx-codesign.sh
           ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler-macOS-4.0.6.zip
         working-directory: ./distribution/macos
