--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,11 +36,15 @@ jobs:
         working-directory: pyinstaller
       - env:
           LDFLAGS: -L/usr/local/opt/openssl/lib
+          CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
+          CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
         if: ${{ matrix.os == 'macos-10.15' }}
         run: |
           sed -i '' 's/4.0.0/4.0.6/' Info.plist
           brew install mysql
           make
+          chmod +x add-osx-certificate.sh && ./add-osx-certificate.sh
+          chmod +x osx-codesign.sh && ./osx-codesign.sh
           ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler-macOS-4.0.6.zip
         working-directory: ./distribution/macos
       - env:
