--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           pip install --upgrade pip setuptools wheel
           pip install numpy
           pip install pyinstaller
-          git clone https://github.com/CellProfiler/distribution.git
+#          git clone https://github.com/CellProfiler/distribution.git
       - env:
           LDFLAGS: -L/usr/local/opt/openssl/lib
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
@@ -41,10 +41,10 @@ jobs:
           sed -i '' 's/4.0.0/4.0.7/' Info.plist
           brew install mysql
           make
-          chmod +x add-osx-certificate.sh && ./add-osx-certificate.sh
-          chmod +x osx-codesign.sh && ./osx-codesign.sh
+#          chmod +x add-osx-certificate.sh && ./add-osx-certificate.sh
+#          chmod +x osx-codesign.sh && ./osx-codesign.sh
           ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler-macOS-4.0.7.zip
-        working-directory: ./distribution/macos
+        working-directory: ./CellProfiler/distribution/macos
       - env:
           JDK_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
         if: ${{ matrix.os == 'windows-2019' }}
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: CellProfiler-Windows-4.0.7.exe
-          path: ./distribution/windows/Output/CellProfiler-Windows-4.0.7.exe
+          path: ./CellProfiler/distribution/windows/Output/CellProfiler-Windows-4.0.7.exe
     strategy:
       matrix:
         os: [macos-10.15, windows-2019]
