--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           asset_content_type: application/zip
-          asset_name: CellProfiler-macOS-4.0.7.zip
+          asset_name: CellProfiler-macOS-4.0.7-gs.zip
           asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler-macOS-4.0.7.zip
           upload_url: ${{ steps.create_release.outputs.upload_url }}
       - env:
@@ -103,7 +103,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           asset_content_type: application/exe
-          asset_name: CellProfiler-Windows-4.0.7.exe
+          asset_name: CellProfiler-Windows-4.0.7-gs.exe
           asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler-Windows-4.0.7.exe
           upload_url: ${{ steps.create_release.outputs.upload_url }}
 name: create-release
