--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,9 +58,12 @@ jobs:
           pip install mysqlclient==1.4.6
           pip install --editable .
       - if: ${{ matrix.os == 'windows-2019' }}
+        name: "CellProfiler-core install"
+        run: |
+          cd core && pip3 install --editable . --upgrade
+      - if: ${{ matrix.os == 'windows-2019' }}
         name: Windows build
         run: |
-          pip3 install --editable "core[test]" --upgrade
           pyinstaller distribution/windows/cellprofiler.spec
           iscc /dMyAppVersion="4.0.7" "distribution/windows/cellprofiler.iss"
       - if: ${{ matrix.os == 'macos-10.15' }}
