--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
         if: ${{ matrix.os == 'macos-10.15' }}
+        name: MacOS build
         run: |
           ls -la
           sed -i '' 's/4.0.0/4.0.7/' Info.plist
@@ -52,17 +53,14 @@ jobs:
       - env:
           JDK_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
         if: ${{ matrix.os == 'windows-2019' }}
-        name: MacOS build
+        name: Windows build
         run: |
+          cd core && pip3 install --editable . --upgrade
           pip install cython
           pip install mysqlclient==1.4.6
           pip install --editable .
       - if: ${{ matrix.os == 'windows-2019' }}
-        name: "CellProfiler-core install"
-        run: |
-          cd core && pip3 install --editable . --upgrade
-      - if: ${{ matrix.os == 'windows-2019' }}
-        name: Windows build
+        name: Windows pyinstaller build
         run: |
           pyinstaller distribution/windows/cellprofiler.spec
           iscc /dMyAppVersion="4.0.7" "distribution/windows/cellprofiler.iss"
