--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           architecture: x64
       - run: |
           pip install --upgrade pip setuptools wheel
-          pip install numpy
+          pip install numpy==1.19.3
           pip install pyinstaller
           git clone https://github.com/CellProfiler/distribution.git
       - env:
