MacOS build with python-bioformats compat-4-0

--- a/distribution/macos/Makefile
+++ b/distribution/macos/Makefile
@@ -18,6 +18,12 @@ CellProfiler:
 .PHONY: dependencies
 dependencies: CellProfiler
 
+	git clone https://github.com/glencoesoftware/omero-reader.git
+	cd omero-reader && git checkout master & pip install --editable . --upgrade
+
+	git clone https://github.com/emilroz/python-bioformats.git
+	cd python-bioformats && git checkout compat-4-0 && pip install --editable . --upgrade
+
 	git clone https://github.com/emilroz/core.git
 
 	cd core && git checkout compat-4-0
