--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - if: ${{ matrix.os == 'macos-10.14' }}
+      - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/cache@v2
         with:
           path: ~/Library/Caches/pip
@@ -35,9 +35,11 @@ jobs:
           LDFLAGS: -L/usr/local/opt/openssl/lib
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
-        if: ${{ matrix.os == 'macos-10.14' }}
+        if: ${{ matrix.os == 'macos-10.15' }}
         name: MacOS build
         run: |
+          ls -la /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/
+          ls -la /Library/Developer/CommandLineTools/SDKs/
           ls -la
           sed -i '' 's/4.0.0/4.0.7/' Info.plist
           brew install mysql
@@ -72,7 +74,7 @@ jobs:
         run: |
           pyinstaller distribution/windows/cellprofiler.spec
           iscc /dMyAppVersion="4.0.7" "distribution/windows/cellprofiler.iss"
-      - if: ${{ matrix.os == 'macos-10.14' }}
+      - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/upload-artifact@v1
         name: MacOS artifact upload
         with:
@@ -86,7 +88,7 @@ jobs:
           path: ./distribution/windows/Output/CellProfiler-Windows-4.0.7.exe
     strategy:
       matrix:
-        os: [macos-10.14, windows-2019]
+        os: [macos-10.15, windows-2019]
         python-version: [ "3.8" ]
   upload:
     name: upload
