--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - if: ${{ matrix.os == 'macos-10.15' }}
+      - if: ${{ matrix.os == 'macos-10.14' }}
         uses: actions/cache@v2
         with:
           path: ~/Library/Caches/pip
@@ -27,6 +27,9 @@ jobs:
           java-version: '14.0.1' # The JDK version to make available on the path.
           java-package: jdk
           architecture: x64
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '10'
       - run: |
           pip install --upgrade pip setuptools wheel
           pip install numpy==1.20.1
@@ -35,7 +38,7 @@ jobs:
           LDFLAGS: -L/usr/local/opt/openssl/lib
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
-        if: ${{ matrix.os == 'macos-10.15' }}
+        if: ${{ matrix.os == 'macos-10.14' }}
         name: MacOS build
         run: |
           ls -la /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/
@@ -74,7 +77,7 @@ jobs:
         run: |
           pyinstaller distribution/windows/cellprofiler.spec
           iscc /dMyAppVersion="4.0.7" "distribution/windows/cellprofiler.iss"
-      - if: ${{ matrix.os == 'macos-10.15' }}
+      - if: ${{ matrix.os == 'macos-10.14' }}
         uses: actions/upload-artifact@v1
         name: MacOS artifact upload
         with:
@@ -88,7 +91,7 @@ jobs:
           path: ./distribution/windows/Output/CellProfiler-Windows-4.0.7.exe
     strategy:
       matrix:
-        os: [macos-10.15, windows-2019]
+        os: [macos-10.14, windows-2019]
         python-version: [ "3.8" ]
   upload:
     name: upload
