--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,8 @@ jobs:
           java-version: '14.0.1' # The JDK version to make available on the path.
           java-package: jdk
           architecture: x64
-      - uses: maxim-lobanov/setup-xcode@v1
+      - if: ${{ matrix.os == 'macos-10.14' }}
+        uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '10'
       - run: |
