--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,6 +84,7 @@ jobs:
       - if: ${{ matrix.os == 'macos-10.14' }}
         uses: actions/upload-artifact@v1
         name: MacOS artifact upload
+        continue-on-error: true
         with:
           name: CellProfiler-macOS-4.0.7.zip
           path: ./distribution/macos/dist/CellProfiler-macOS-4.0.7.zip
@@ -116,6 +117,7 @@ jobs:
         with:
           name: CellProfiler-macOS-4.0.7.zip
           path: ./
+          continue-on-error: true
       - uses: actions/download-artifact@v1
         with:
           name: CellProfiler-Windows-4.0.7.exe
@@ -128,6 +130,7 @@ jobs:
           asset_name: CellProfiler-macOS-4.0.7-gs.zip
           asset_path: /home/runner/work/CellProfiler/CellProfiler/CellProfiler-macOS-4.0.7.zip
           upload_url: ${{ steps.create_release.outputs.upload_url }}
+          continue-on-error: true
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: actions/upload-release-asset@v1
