--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,7 +112,5 @@ jobs:
 name: create-release
 on:
   push:
-#    tags:
-#      - "v*"
-    branches:
-      - java_detection
+    tags:
+      - "v*"
